--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <video
       id="myVideo"
       src="Rick Astley - Never Gonna Give You Up (Official Music Video).mp4"
-      muted
+      unmuted
       controls
       autoplay
       poster=""
